Updated the page

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				<h3>Installation</h3>
 				<p>
 					Installing Fedora Utils is as easy as running a single command. To install the latest version of Fedora Utils in your system,
-					just follow the instructions bellow and enter your root password when prompted.
+					open the terminal and run the folllowing command, enter your root password when prompted.
 				</p>
 				<pre>su -c "curl http://download.opensuse.org/repositories/home:/satya164:/fedorautils/Fedora_17/home:satya164:fedorautils.repo -o /etc/yum.repos.d/fedorautils.repo && yum install fedorautils"</pre>
 				<p>
@@ -145,12 +145,8 @@
 					Adding the repo to your system ensures that Fedora Utils is always up-to-date and all the new features and bug fixes are delivered to you automatically.
 				</p>
 				<div class="alert alert-info">
-					<i class="icon-info-sign"> </i> Though the address above specifies Fedora 17, fedorautils isn't limited to Fedora 17
-				</div>
-				<p>
-					If you are using Fedora 17, then you will also need to install the patched zenity.
-				</p>
-				<pre>su -c "curl http://download.opensuse.org/repositories/home:/satya164:/zenity/Fedora_17/home:satya164:zenity.repo -o /etc/yum.repos.d/zenity.repo && yum update zenity"</pre>				
+					<i class="icon-info-sign"> </i> Though the address above specifies Fedora 17, fedorautils isn't limited to Fedora 17 and also works on Fedora 18.
+				</div>			
 
  <h3>More Info</h3>
 				<p>
