--- a/man.html
+++ b/man.html
@@ -7,29 +7,12 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<!-- Le styles -->
 		<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="assets/nivo-slider/nivo-slider.css" rel="stylesheet">
 		<link href="assets/nivo-slider/themes/default/default.css" rel="stylesheet">
 		<link href="assets/styles.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic,500italic,700italic' rel='stylesheet' type='text/css'>
-		<style type="text/css">
-			body {
-				padding-top: 60px;
-				padding-bottom: 40px;
-			}
-		</style>
 
-		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-		<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-
-		<!-- Fav and touch icons -->
-		<!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png"> -->
 		<link rel="shortcut icon" href="assets/favicon.png">
 	</head>
 
@@ -51,26 +34,19 @@
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
-					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a>
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
 					<a class="brand" href="http://satya164.github.com/fedorautils/"><img src="assets/fedorautils.png">Fedora Utils</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li>
-								<a href="https://github.com/satya164/fedorautils/wiki">Wiki</a>
-							</li>
-							<li>
-								<a href="https://github.com/satya164/fedorautils/issues">Issues</a>
-							</li>
-							<li>
-								<a href="https://github.com/satya164/fedorautils/blob/master/CHANGELOG">Changelog</a>
-							</li>
-							<li><a href="http://satya164.github.com/fedorautils/man.html">User Manual</a></li>
+							<li><a href="https://github.com/satya164/fedorautils/">Code</a></li>
+							<li><a href="https://github.com/satya164/fedorautils/wiki">Wiki</a></li>
+							<li><a href="https://github.com/satya164/fedorautils/issues">Issues</a></li>
+							<li><a href="https://github.com/satya164/fedorautils/blob/master/CHANGELOG">Changelog</a></li>
+							<li><a href="man.html">User Manual</a></li>
 						</ul>
 						<div class="pull-right">
 							<ul class="nav myshare">
-								<li>
-									<g:plusone size="medium" data-href="http://satya164.github.com/fedorautils/" ></g:plusone>
-								</li>
+								<li><g:plusone size="medium" data-href="http://satya164.github.com/fedorautils/" ></g:plusone></li>
 								<li>
 									<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://satya164.github.com/fedorautils/" data-text="Tweak your Fedora" data-via="satya164" data-hashtags="fedorautils">Tweet</a>
 									<script>
@@ -89,7 +65,7 @@
 									<div class="fb-like" data-href="http://satya164.github.com/fedorautils/" data-layout="button_count" data-send="false" data-width="300" data-colorscheme="light" data-show-faces="false"></div>
 								</li>
 							</ul>
-							<a class="btn btn-info btn-small forkme" href="https://github.com/satya164/fedorautils/"> <i class="mygithub">Fork me on GitHub!</i></a>
+							<a class="btn btn-success btn-small rightbutton" href="http://satya164.github.com/fedorautils#install"><i class="icon-download"></i>Install in Fedora 18</a>
 						</div>
 					</div>
 				</div><!--/.nav-collapse -->
@@ -233,6 +209,12 @@
 				<p class="copyrights">
 					Fedora Utils © 2012 Satyajit Sahoo. <a href="http://fedoraproject.org/" target="_blank">Fedora™ </a>is a trademark of <a href="http://redhat.com/" target="_blank">Red Hat</a>. All rights reserved.
 				</p>
+			</footer>
+
+		</div>
+
+			<footer>
+				<p class="copyrights">Fedora Utils © 2012 Satyajit Sahoo. <a href="http://fedoraproject.org/" target="_blank">Fedora™ </a>is a trademark of <a href="http://redhat.com/" target="_blank">Red Hat</a>. All rights reserved.</p>
 			</footer>
 
 		</div>
