--- a/man.html
+++ b/man.html
@@ -2,17 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Fedora Utils - User manual</title>
+		<title>Fedora Utils - Tweak your Fedora</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
 
+		<!-- Le styles -->
 		<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="assets/nivo-slider/nivo-slider.css" rel="stylesheet">
 		<link href="assets/nivo-slider/themes/default/default.css" rel="stylesheet">
 		<link href="assets/styles.css" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700,400italic,500italic,700italic' rel='stylesheet' type='text/css'>
-
+		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic,400italic,600italic,700italic" rel='stylesheet' type='text/css'>
 		<link rel="shortcut icon" href="assets/favicon.png">
 	</head>
 
@@ -31,41 +31,32 @@
 				}(document, 'script', 'facebook-jssdk'));
 		</script>
 
-		<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar navbar-inverse navbar-static-top">
 			<div class="navbar-inner">
 				<div class="container">
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
 					<a class="brand" href="http://satya164.github.com/fedorautils/"><img src="assets/fedorautils.png">Fedora Utils</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li><a href="https://github.com/satya164/fedorautils/">Code</a></li>
-							<li><a href="https://github.com/satya164/fedorautils/wiki">Wiki</a></li>
-							<li><a href="https://github.com/satya164/fedorautils/issues">Issues</a></li>
-							<li><a href="https://github.com/satya164/fedorautils/blob/master/CHANGELOG">Changelog</a></li>
-							<li><a href="man.html">User Manual</a></li>
+							<li>
+								<a href="https://github.com/satya164/fedorautils/">Code</a>
+							</li>
+							<li>
+								<a href="https://github.com/satya164/fedorautils/wiki">Wiki</a>
+							</li>
+							<li>
+								<a href="https://github.com/satya164/fedorautils/issues">Issues</a>
+							</li>
+							<li>
+								<a href="https://github.com/satya164/fedorautils/blob/master/CHANGELOG">Changelog</a>
+							</li>
+							<li>
+								<a href="man.html">User Manual</a>
+							</li>
 						</ul>
 						<div class="pull-right">
-							<ul class="nav myshare">
-								<li><g:plusone size="medium" data-href="http://satya164.github.com/fedorautils/" ></g:plusone></li>
-								<li>
-									<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://satya164.github.com/fedorautils/" data-text="Tweak your Fedora" data-via="satya164" data-hashtags="fedorautils">Tweet</a>
-									<script>
-										! function(d, s, id) {
-											var js, fjs = d.getElementsByTagName(s)[0];
-											if (!d.getElementById(id)) {
-												js = d.createElement(s);
-												js.id = id;
-												js.src = "//platform.twitter.com/widgets.js";
-												fjs.parentNode.insertBefore(js, fjs);
-											}
-										}(document, "script", "twitter-wjs");
-									</script>
-								</li>
-								<li>
-									<div class="fb-like" data-href="http://satya164.github.com/fedorautils/" data-layout="button_count" data-send="false" data-width="300" data-colorscheme="light" data-show-faces="false"></div>
-								</li>
-							</ul>
-							<a class="btn btn-success btn-small rightbutton" href="http://satya164.github.com/fedorautils#install"><i class="icon-download"></i>Install in Fedora 18</a>
+
+							<a class="btn btn-success btn-small rightbutton" href="http://satya164.github.com#install"><i class="icon-download"></i>Install in Fedora 18</a
 						</div>
 					</div>
 				</div><!--/.nav-collapse -->
@@ -213,11 +204,6 @@
 
 		</div>
 
-			<footer>
-				<p class="copyrights">Fedora Utils © 2012 Satyajit Sahoo. <a href="http://fedoraproject.org/" target="_blank">Fedora™ </a>is a trademark of <a href="http://redhat.com/" target="_blank">Red Hat</a>. All rights reserved.</p>
-			</footer>
-
-		</div>
 		<!-- /container -->
 
 		<script type="text/javascript">
