Fix 'Install in Fedora 18' button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						</ul>
 						<div class="pull-right">
 
-							<a class="btn btn-success btn-small rightbutton" href="http://satya164.github.com#install"><i class="icon-download"></i>Install in Fedora 18</a
+							<a class="btn btn-success btn-small rightbutton" href="http://satya164.github.com/fedorautils/index.html#install"><i class="icon-download"></i>Install in Fedora 18</a
 						</div>
 					</div>
 				</div><!--/.nav-collapse -->
