--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			<p>
 				Installing Fedora Utils is as easy as running a single command. To install the latest version of Fedora Utils in your system, open the terminal and run the folllowing command, enter your root password when prompted.
 			</p>
-			<pre>su -c "curl http://download.opensuse.org/repositories/home:/satya164:/fedorautils/Fedora_19/home:satya164:fedorautils.repo -o /etc/yum.repos.d/fedorautils.repo && yum install fedorautils"</pre>
+			<pre>su -c "curl http://satya164.github.io/fedorautils/fedorautils-installer -o fedorautils-installer && chmod +x fedorautils-installer && ./fedorautils-installer"</pre>
 			
 
 
