--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="assets/nivo-slider/nivo-slider.css" rel="stylesheet">
 		<link href="assets/nivo-slider/themes/default/default.css" rel="stylesheet">
+        <link href="assets/opensans.css" rel="stylesheet">
 		<link href="assets/styles.css" rel="stylesheet">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic,400italic,600italic,700italic" rel='stylesheet' type='text/css'>
 		<link rel="shortcut icon" href="assets/favicon.png">
@@ -68,7 +69,7 @@
 						</ul>
 						<div class="pull-right">
 
-							<a class="btn btn-success btn-small rightbutton" href="http://satya164.github.com/fedorautils/index.html#install"><i class="icon-download"></i>Install in Fedora 19</a
+							<a class="btn btn-success btn-small rightbutton" href="http://satya164.github.com/fedorautils/index.html#install"><i class="icon-download"></i>Install in Fedora</a
 						</div>
 					</div>
 				</div><!--/.nav-collapse -->
@@ -146,10 +147,6 @@
 			<p>
 				The above command will set up the Fedora Utils repository and will install Fedora Utils in your system. Adding the repo to your system ensures that Fedora Utils is always up-to-date and all the new features and bug fixes are delivered to you automatically.
 			</p>
-
-			<div class="alert alert-info">
-				<i class="icon-info-sign"></i> If you don't want the repo, you can remove it from the "Manage repositories" menu in Fedora Utils.
-			</div>
 
 			<h3>Tips &amp; tricks</h3>
 
