--- a/index.html
+++ b/index.html
@@ -104,20 +104,20 @@
 
 			<div class="slider-wrapper theme-default">
 				<div id="slider" class="nivoSlider">
-					<img src="images/fu-main.png" data-thumb="images/fu-main.png" title="#htmlcaption1" alt="" />
-					<img src="images/fu-tweaks.png" data-thumb="images/fu-tweaks.png"  title="#htmlcaption2" alt="" />
-					<img src="images/fu-software.png" data-thumb="images/fu-software.png" title="#htmlcaption3" alt="" />
-					<img src="images/fu-repos.png" data-thumb="images/fu-repos.png" title="#htmlcaption4" alt="" />
-					<img src="images/fu-plugins.png" data-thumb="images/fu-plugins.png" title="#htmlcaption5" alt="" />
+					<img src="images/fu-main.jpg" data-thumb="images/fu-main.jpg" title="#htmlcaption1" alt="" />
+					<img src="images/fu-tweaks.jpg" data-thumb="images/fu-tweaks.jpg"  title="#htmlcaption2" alt="" />
+					<img src="images/fu-software.jpg" data-thumb="images/fu-software.jpg" title="#htmlcaption3" alt="" />
+					<img src="images/fu-repos.jpg" data-thumb="images/fu-repos.jpg" title="#htmlcaption4" alt="" />
+					<img src="images/fu-plugins.jpg" data-thumb="images/fu-plugins.jpg" title="#htmlcaption5" alt="" />
 				</div>
 				<div id="htmlcaption1" class="nivo-html-caption">
-					Start screen using zenity
+					Easy to use interface
 				</div>
 				<div id="htmlcaption2" class="nivo-html-caption">
 					Tweak your system, install codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems" >doesn't want to ship</a>
 				</div>
 				<div id="htmlcaption3" class="nivo-html-caption">
-					Install many popular software just with one click!
+					Install many popular software with just one click!
 				</div>
 				<div id="htmlcaption4" class="nivo-html-caption">
 					Easily manage your repositories and even add several third party repositories from <a href="http://repos.fedorapeople.org/">repos.fedorapeople.org</a>
