--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				</div>
 			</div>
 
-			<h3>What is Fedora Utils?</h3>
+			<h3>Makes easy to set-up Fedora./h3>
 
 			<p>
 				Fedora Utils lets you install codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems" >doesn't want to ship</a>, like MP3 codecs, Adobe Flash, Oracle Java etc. It can also fix problems, tweak and cleanup your system, show system information and much more with just few clicks.
@@ -135,23 +135,23 @@
 
 			<a name="install"></a>
 
-			<h3>Installation</h3>
+			<h3>Installation is a piece of cake.</h3>
 
 			<p>
-				Installing Fedora Utils is as easy as running a single command. To install the latest version of Fedora Utils in your system, open the terminal and run the folllowing command, enter your root password when prompted.
+				Fedora Utils can be installed by running the folllowing command as root,
 			</p>
 			<pre>su -c "curl http://satya164.github.io/fedorautils/fedorautils-installer -o fedorautils-installer && chmod +x fedorautils-installer && ./fedorautils-installer"</pre>
 			
 
 
 			<p>
-				The above command will set up the Fedora Utils repository and will install Fedora Utils in your system. Adding the repo to your system ensures that Fedora Utils is always up-to-date and all the new features and bug fixes are delivered to you automatically.
+				The Fedora Utils repository ensures that Fedora Utils is always up-to-date and all the new features and bug fixes are delivered to you automatically.
 			</p>
 
 			<h3>Tips &amp; tricks</h3>
 
 			<p>
-				What's the best thing about Fedora Utils? If you think it's the GUI, then think again! You can use Fedora Utils in bash scripts to help you install software and tweak the sytsem automatically. See <code>
+				If you think that the best thing about Fedora Utils is the GUI, then think again! You can use Fedora Utils in bash scripts to help you install software and tweak the sytsem automatically. See <code>
 					fedorautils --exec list</code>
 				for a list of commands you can use in bash scripts.
 			</p>
