--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				</div>
 			</div>
 
-			<h3>Makes easy to set-up Fedora./h3>
+			<h3>Makes easy to set-up Fedora.</h3>
 
 			<p>
 				Fedora Utils lets you install codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems" >doesn't want to ship</a>, like MP3 codecs, Adobe Flash, Oracle Java etc. It can also fix problems, tweak and cleanup your system, show system information and much more with just few clicks.
