--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Fedora Utils - Tweak your Fedora</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
 
-		<!-- Le styles -->
-		<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link href="assets/nivo-slider/nivo-slider.css" rel="stylesheet">
-		<link href="assets/nivo-slider/themes/default/default.css" rel="stylesheet">
-        <link href="assets/opensans.css" rel="stylesheet">
-		<link href="assets/styles.css" rel="stylesheet">
-		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic,400italic,600italic,700italic" rel='stylesheet' type='text/css'>
-		<link rel="shortcut icon" href="assets/favicon.png">
-		
-        <script type="text/javascript">
-        var _gaq = _gaq || [];
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+
+    <title>Fedora Utils - Tweak your Fedora</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="description">
+    <meta content="" name="author"><!-- Le styles -->
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/nivo-slider/nivo-slider.css" rel="stylesheet">
+    <link href="assets/nivo-slider/themes/default/default.css" rel="stylesheet">
+    <link href="assets/opensans.css" rel="stylesheet">
+    <link href="assets/styles.css" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic,400italic,600italic,700italic" rel='stylesheet' type='text/css'>
+    <link href="assets/favicon.png" rel="shortcut icon">
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-32225443-1']);
         _gaq.push(['_trackPageview']);
 
@@ -26,179 +25,140 @@
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
-        </script>
-	</head>
+    </script>
+</head>
 
-	<body>
-		<!-- FACEBOOK -->
-		<div id="fb-root"></div>
-		<script>
-			( function(d, s, id) {
-					var js, fjs = d.getElementsByTagName(s)[0];
-					if (d.getElementById(id))
-						return;
-					js = d.createElement(s);
-					js.id = id;
-					js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-					fjs.parentNode.insertBefore(js, fjs);
-				}(document, 'script', 'facebook-jssdk'));
-		</script>
+<body>
+    <!-- FACEBOOK -->
 
-		<div class="navbar navbar-inverse navbar-static-top">
-			<div class="navbar-inner">
-				<div class="container">
-					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a>
-					<a class="brand" href="http://satya164.github.com/fedorautils/"><img src="assets/fedorautils.png">Fedora Utils</a>
-					<div class="nav-collapse collapse">
-						<ul class="nav">
-							<li>
-								<a href="https://github.com/satya164/fedorautils/">Code</a>
-							</li>
-							<li>
-								<a href="https://github.com/satya164/fedorautils/wiki">Wiki</a>
-							</li>
-							<li>
-								<a href="https://github.com/satya164/fedorautils/issues">Issues</a>
-							</li>
-							<li>
-								<a href="https://github.com/satya164/fedorautils/blob/master/CHANGELOG">Changelog</a>
-							</li>
-							<li>
-								<a href="man.html">User Manual</a>
-							</li>
-						</ul>
-						<div class="pull-right">
+    <div id="fb-root"></div><script>
+        ( function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id))
+                        return;
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+                    fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'facebook-jssdk'));
+    </script>
 
-							<a class="btn btn-success btn-small rightbutton" href="http://satya164.github.com/fedorautils/index.html#install"><i class="icon-download"></i>Install in Fedora</a
-						</div>
-					</div>
-				</div><!--/.nav-collapse -->
-			</div>
-		</div>
+    <div class="navbar navbar-inverse navbar-static-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse"></a> <a class="brand" href="http://satya164.github.com/fedorautils/"><img src="assets/fedorautils.png">Fedora Utils</a>
 
-		<div class="container">
-			<div id="socials">
-				<ul>
-					<li>
-						<g:plusone size="medium" data-href="http://satya164.github.com/fedorautils/" ></g:plusone>
-					</li>
-					<li>
-						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://satya164.github.com/fedorautils/" data-text="Tweak your Fedora" data-via="satya164" data-hashtags="fedorautils">Tweet</a>
-						<script>
-							! function(d, s, id) {
-								var js, fjs = d.getElementsByTagName(s)[0];
-								if (!d.getElementById(id)) {
-									js = d.createElement(s);
-									js.id = id;
-									js.src = "//platform.twitter.com/widgets.js";
-									fjs.parentNode.insertBefore(js, fjs);
-								}
-							}(document, "script", "twitter-wjs");
-						</script>
-					</li>
-					<li>
-						<div class="fb-like" data-href="http://satya164.github.com/fedorautils/" data-layout="button_count" data-send="false" data-width="300" data-colorscheme="light" data-show-faces="false"></div>
-					</li>
-				</ul>
-			</div>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li><a href="https://github.com/satya164/fedorautils/">Code</a></li>
 
-			<div class="slider-wrapper theme-default">
-				<div id="slider" class="nivoSlider">
-					<img src="images/fu-main.jpg" data-thumb="images/fu-main.jpg" title="#htmlcaption1" alt="" />
-					<img src="images/fu-tweaks.jpg" data-thumb="images/fu-tweaks.jpg"  title="#htmlcaption2" alt="" />
-					<img src="images/fu-software.jpg" data-thumb="images/fu-software.jpg" title="#htmlcaption3" alt="" />
-					<img src="images/fu-repos.jpg" data-thumb="images/fu-repos.jpg" title="#htmlcaption4" alt="" />
-					<img src="images/fu-plugins.jpg" data-thumb="images/fu-plugins.jpg" title="#htmlcaption5" alt="" />
-				</div>
-				<div id="htmlcaption1" class="nivo-html-caption">
-					Easy to use interface
-				</div>
-				<div id="htmlcaption2" class="nivo-html-caption">
-					Tweak your system, install codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems" >doesn't want to ship</a>
-				</div>
-				<div id="htmlcaption3" class="nivo-html-caption">
-					Install many popular software with just one click!
-				</div>
-				<div id="htmlcaption4" class="nivo-html-caption">
-					Easily manage your repositories and even add several third party repositories from <a href="http://repos.fedorapeople.org/">repos.fedorapeople.org</a>
-				</div>
-				<div id="htmlcaption5" class="nivo-html-caption">
-					Fedora Utils is extensible with plugins. You can <a href="https://github.com/satya164/fedorautils/wiki/Plugins-support">write your own plugin</a>
-				</div>
-			</div>
+                        <li><a href="https://github.com/satya164/fedorautils/wiki">Wiki</a></li>
 
-			<h3>Makes easy to set-up Fedora.</h3>
+                        <li><a href="https://github.com/satya164/fedorautils/issues">Issues</a></li>
 
-			<p>
-				Fedora Utils lets you install codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems" >doesn't want to ship</a>, like MP3 codecs, Adobe Flash, Oracle Java etc. It can also fix problems, tweak and cleanup your system, show system information and much more with just few clicks.
-			</p>
+                        <li><a href="https://github.com/satya164/fedorautils/blob/master/CHANGELOG">Changelog</a></li>
 
-			<a name="install"></a>
+                        <li><a href="man.html">User Manual</a></li>
+                    </ul>
 
-			<h3>Installation is a piece of cake.</h3>
+                    <div class="pull-right">
+                        <a class="btn btn-success btn-small rightbutton" href="http://satya164.github.com/fedorautils/index.html#install">Install in Fedora</a>
+                    </div>
+                </div><!--/.nav-collapse -->
+            </div>
+        </div>
 
-			<p>
-				Fedora Utils can be installed by running the folllowing command as root,
-			</p>
-			<pre>su -c "curl http://satya164.github.io/fedorautils/fedorautils-installer -o fedorautils-installer && chmod +x fedorautils-installer && ./fedorautils-installer"</pre>
-			
+        <div class="container">
+            <div id="socials">
+                <ul>
+                    <li>
+                        <a class="twitter-share-button" data-hashtags="fedorautils" data-text="Tweak your Fedora" data-url="http://satya164.github.com/fedorautils/" data-via="satya164" href="https://twitter.com/share">Tweet</a> <script>
+    ! function(d, s, id) {
+                                var js, fjs = d.getElementsByTagName(s)[0];
+                                if (!d.getElementById(id)) {
+                                    js = d.createElement(s);
+                                    js.id = id;
+                                    js.src = "//platform.twitter.com/widgets.js";
+                                    fjs.parentNode.insertBefore(js, fjs);
+                                }
+                            }(document, "script", "twitter-wjs");
+                        </script>
+                    </li>
 
+                    <li>
+                        <div class="fb-like" data-colorscheme="light" data-href="http://satya164.github.com/fedorautils/" data-layout="button_count" data-send="false" data-show-faces="false" data-width="300"></div>
+                    </li>
+                </ul>
+            </div>
 
-			<p>
-				The Fedora Utils repository ensures that Fedora Utils is always up-to-date and all the new features and bug fixes are delivered to you automatically.
-			</p>
+            <div class="slider-wrapper theme-default">
+                <div class="nivoSlider" id="slider"><img alt="" data-thumb="images/fu-main.jpg" src="images/fu-main.jpg" title="#htmlcaption1"> <img alt="" data-thumb="images/fu-tweaks.jpg" src="images/fu-tweaks.jpg" title="#htmlcaption2"> <img alt="" data-thumb="images/fu-software.jpg" src="images/fu-software.jpg" title="#htmlcaption3"> <img alt="" data-thumb="images/fu-repos.jpg" src="images/fu-repos.jpg" title="#htmlcaption4"> <img alt="" data-thumb="images/fu-plugins.jpg" src="images/fu-plugins.jpg" title="#htmlcaption5"></div>
 
-			<h3>Tips &amp; tricks</h3>
+                <div class="nivo-html-caption" id="htmlcaption1">
+                    Easy to use interface
+                </div>
 
-			<p>
-				If you think that the best thing about Fedora Utils is the GUI, then think again! You can use Fedora Utils in bash scripts to help you install software and tweak the sytsem automatically. See <code>
-					fedorautils --exec list</code>
-				for a list of commands you can use in bash scripts.
-			</p>
+                <div class="nivo-html-caption" id="htmlcaption2">
+                    Tweak your system, install codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems">doesn't want to ship</a>
+                </div>
 
-			<p>
-				Fedora Utils saves the downloaded files. Have to do the same steps on more than one system? You won't need to redownload the files again. Fedora Utils can use previously downloaded files with ease. Combine this with the scripting ability, and configuring multiple systems becomes a lot easier.
-			</p>
+                <div class="nivo-html-caption" id="htmlcaption3">
+                    Install many popular software with just one click!
+                </div>
 
-			<p>
-				You can also extend the functionality of Fedora Utils by plugins. Writing a plugin is easy and fun. Refer <a href="https://github.com/satya164/fedorautils/wiki/Plugins-support">this page</a> to have an idea.
-			</p>
+                <div class="nivo-html-caption" id="htmlcaption4">
+                    Easily manage your repositories and even add several third party repositories from <a href="http://repos.fedorapeople.org/">repos.fedorapeople.org</a>
+                </div>
 
-			<h3>More info</h3>
+                <div class="nivo-html-caption" id="htmlcaption5">
+                    Fedora Utils is extensible with plugins. You can <a href="https://github.com/satya164/fedorautils/wiki/Plugins-support">write your own plugin</a>
+                </div>
+            </div>
 
-			<p>
-				Fedora Utils is released under GNU GPL V3.0 and the source code is publicly available on <a href="https://github.com/satya164/fedorautils/">GitHub</a>. Feel free to make modifications and contributions.
-			</p>
+            <h3>What is Fedora Utils?</h3>
 
-			<p>
-				If you like Fedora Utils, please support us by spreading the word. You can catch me on <a href="http://plus.google.com/114564489020097923600">Google+</a> or <a href="http://www.facebook.com/satya164">Facebook</a>. Also check my <a href ="http://funsurf-blog.blogspot.com/">blog</a> and <a href="http://satya164.deviantart.com/">deviantArt</a> page :)
-			</p>
+            <p>Fedora Utils lets you install codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems">doesn't want to ship</a>, like MP3 codecs, Adobe Flash, Oracle Java etc. It can also fix problems, tweak and cleanup your system, show system information and much more with just few clicks.</p>
 
-			<hr>
+            <h3>Installation</h3>
+            
+            <a name="install"></a>
+            
+            <p>Fedora Utils can be installed by running the folllowing command as root,</p>
+            <pre>
+su -c "curl http://satya164.github.io/fedorautils/fedorautils-installer -o fedorautils-installer &amp;&amp; chmod +x fedorautils-installer &amp;&amp; ./fedorautils-installer"
+</pre>
 
-			<footer>
-				<p class="copyrights">
-					Fedora Utils © 2012 Satyajit Sahoo. <a href="http://fedoraproject.org/" target="_blank">Fedora™ </a>is a trademark of <a href="http://redhat.com/" target="_blank">Red Hat</a>. All rights reserved.
-				</p>
-			</footer>
+            <p>The Fedora Utils repository ensures that Fedora Utils is always up-to-date and all the new features and bug fixes are delivered to you automatically.</p>
 
-		</div>
-		<!-- /container -->
+            <h3>Tips &amp; tricks</h3>
 
-		<script type="text/javascript">
-			(function() {
-				var po = document.createElement('script');
-				po.type = 'text/javascript';
-				po.async = true;
-				po.src = 'https://apis.google.com/js/plusone.js';
-				var s = document.getElementsByTagName('script')[0];
-				s.parentNode.insertBefore(po, s);
-			})();
-		</script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-		<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-		<script src="assets/nivo-slider/jquery.nivo.slider.pack.js"></script>
-		<script src="assets/js.js"></script>
+            <p>In addition to the GUI, you can also use Fedora Utils in bash scripts to help you install software and tweak the sytsem automatically. See <code>fedorautils --exec list</code> for a list of commands you can use in bash scripts.</p>
 
-	</body>
+            <p>Fedora Utils saves the downloaded files. Have to do the same steps on more than one system? You won't need to redownload the files again. Fedora Utils can use previously downloaded files with ease. Combine this with the scripting ability, and configuring multiple systems becomes a lot easier.</p>
+
+            <p>Fedora Utils is extensible via <a href="https://github.com/satya164/fedorautils/wiki/Plugins-support">plugins</a>. Writing a plugin is easy and fun.</p>
+
+            <h3>More info</h3>
+
+            <p>Fedora Utils is released under GNU GPL V3.0 and the source code is publicly available on <a href="https://github.com/satya164/fedorautils/">GitHub</a>. Feel free to make modifications and contributions.</p>
+
+            <p>If you like Fedora Utils, please support us by spreading the word. You can catch me on <a href="http://plus.google.com/114564489020097923600">Google+</a> or <a href="http://www.facebook.com/satya164">Facebook</a>. Also check my <a href="http://funsurf-blog.blogspot.com/">blog</a> and <a href="http://satya164.deviantart.com/">deviantArt</a> page :)</p>
+            <hr>
+
+            <footer>
+                <p class="copyrights">Fedora Utils © 2012 Satyajit Sahoo. <a href="http://fedoraproject.org/" target="_blank">Fedora™</a> is a trademark of <a href="http://redhat.com/" target="_blank">Red Hat</a>. All rights reserved.</p>
+            </footer>
+        </div><!-- /container -->
+        <script type="text/javascript">
+    (function() {
+                var po = document.createElement('script');
+                po.type = 'text/javascript';
+                po.async = true;
+                po.src = 'https://apis.google.com/js/plusone.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(po, s);
+            })();
+        </script> <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script> <script src="assets/bootstrap/js/bootstrap.min.js"></script> <script src="assets/nivo-slider/jquery.nivo.slider.pack.js"></script> <script src="assets/js.js"></script>
+    </div>
+</body>
 </html>
