Add G+ button back

--- a/index.html
+++ b/index.html
@@ -72,8 +72,13 @@
             <div id="socials">
                 <ul>
                     <li>
-                        <a class="twitter-share-button" data-hashtags="fedorautils" data-text="Tweak your Fedora" data-url="http://satya164.github.com/fedorautils/" data-via="satya164" href="https://twitter.com/share">Tweet</a> <script>
-    ! function(d, s, id) {
+                        <g:plusone size="medium" data-href="http://satya164.github.com/fedorautils/" ></g:plusone>
+                    </li>
+                    
+                    <li>
+                        <a class="twitter-share-button" data-hashtags="fedorautils" data-text="Tweak your Fedora" data-url="http://satya164.github.com/fedorautils/" data-via="satya164" href="https://twitter.com/share">Tweet</a>
+                        <script>
+                            ! function(d, s, id) {
                                 var js, fjs = d.getElementsByTagName(s)[0];
                                 if (!d.getElementById(id)) {
                                     js = d.createElement(s);
