Updated installation script

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="content">
                 <h1 class="title">Install codecs, software, and more...</h1>
                 <p>Fez lets you install multimedia codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems">doesn't want to ship</a>, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just a few clicks.</p>
-                <p>To install Fez in Fedora, open a Terminal and run the folllowing command,</p>
+                <p>To install Fez in Fedora, open a Terminal and run the following command,</p>
                 <div class="code">
                     <code>su -c "curl <a href="http://satya164.github.io/fez/fez-installer">http://satya164.github.io/fez/fez-installer</a> -o fez-installer && chmod +x fez-installer && ./fez-installer"</code>
                 </div>
