Renamed to Fedy

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-        <meta name="title" content="Fez - Tweak your Fedora" />
-        <meta name="description" content="Fez lets you install codecs and additional software that Fedora doesn't want to ship, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just few clicks." />
-        <title>Fez - Tweak your Fedora</title>
+        <meta name="title" content="Fedy - Tweak your Fedora" />
+        <meta name="description" content="Fedy lets you install codecs and additional software that Fedora doesn't want to ship, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just few clicks." />
+        <title>Fedy - Tweak your Fedora</title>
         <link rel="stylesheet" type="text/css" media="all" href="./resources/css/opensans.css">
         <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/stylesheet.css">
         <link rel="shortcut icon" href="./resources/img/favicon.png" type="image/x-icon" />
@@ -14,19 +14,19 @@
         <section id="home">
             <div class="content">
                 <h1 class="title">Install codecs, software, and more...</h1>
-                <p>Fez lets you install multimedia codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems">doesn't want to ship</a>, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just a few clicks.</p>
-                <p>To install Fez in Fedora, open a Terminal and run the following command,</p>
+                <p>Fedy lets you install multimedia codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems">doesn't want to ship</a>, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just a few clicks.</p>
+                <p>To install Fedy in Fedora, open a Terminal and run the following command,</p>
                 <div class="code">
-                    <code>su -c "curl <a href="http://satya164.github.io/fez/fez-installer">http://satya164.github.io/fez/fez-installer</a> -o fez-installer && chmod +x fez-installer && ./fez-installer"</code>
+                    <code>su -c "curl <a href="http://satya164.github.io/fedy/fedy-installer">http://satya164.github.io/fedy/fedy-installer</a> -o fedy-installer && chmod +x fedy-installer && ./fedy-installer"</code>
                 </div>
                 <div class="social">
-                    <a href="http://plus.google.com/share?url=http://satya164.github.io/fez/">
+                    <a href="http://plus.google.com/share?url=http://satya164.github.io/fedy/">
                         <img src="resources/img/googleplus.svg" />
                     </a>
-                    <a href="http://www.facebook.com/sharer/sharer.php?u=http://satya164.github.io/fez/">
+                    <a href="http://www.facebook.com/sharer/sharer.php?u=http://satya164.github.io/fedy/">
                         <img src="resources/img/facebook.svg" />
                     </a>
-                    <a href="http://twitter.com/intent/tweet?text=Fez makes setting up your Fedora a breeze&url=http://satya164.github.io/fez/&via=satya164">
+                    <a href="http://twitter.com/intent/tweet?text=Fedy makes setting up your Fedora a breeze&url=http://satya164.github.io/fedy/&via=satya164">
                         <img src="resources/img/twitter.svg" />
                     </a>
                 </div>
@@ -34,26 +34,26 @@
         </section>
         <section id="more">
             <div class="content">
-                <img class="right" src="resources/img/fez.png" />
+                <img class="right" src="resources/img/fedy.png" />
                 <h1>Updated, always</h1>
-                <p>Fez automagically finds the download links for latest versions of software you choose to install and adds repositories wherever possible, so that you are always up-to-date.</p>
-                <p>The built-in updater also ensures that Fez itself is up-to-date.</p>
+                <p>Fedy automagically finds the download links for latest versions of software you choose to install and adds repositories wherever possible, so that you are always up-to-date.</p>
+                <p>The built-in updater also ensures that Fedy itself is up-to-date.</p>
                 <h1>For the script junkie</h1>
                 <p>You can perform operations from the command line, and even use it in scripts to automate tasks. To see all command line options supported, run the following in the Terminal,</p>
-                <code>fez -e list</code>
-                <p>The downloaded files are saved in a folder named "fez_dl" in your home directory, so that you can use them on another computer, or if you need to reinstall Fedora, without having to redownload.</p>
+                <code>fedy -e list</code>
+                <p>The downloaded files are saved in a folder named "fedy_dl" in your home directory, so that you can use them on another computer, or if you need to reinstall Fedora, without having to redownload.</p>
                 <h1>Explore new stuff</h1>
-                <p>Fez aggregates the repositories available for the specific Fedora version from the <a href="http://repos.fedorapeople.org">fedorapeople repository</a> in an easy to use list.</p>
+                <p>Fedy aggregates the repositories available for the specific Fedora version from the <a href="http://repos.fedorapeople.org">fedorapeople repository</a> in an easy to use list.</p>
                 <p>The repositories can be easily added with a few clicks. No more messing around with manual hunting and downloading of .repo files.</p>
                 <h1>Open and extensible</h1>
-                <p>Fez is released under GNU GPL V3.0 and the source code is publicly available on <a href="https://github.com/satya164/fez/">GitHub</a>. So you can play with the code and see what it does.</p>
-                <p>Fez is extensible via <a href="https://github.com/satya164/fez/wiki/Plugins-support">plugins</a>. Writing a plugin is easy and fun.</p>
-                <h1>Fezzes are cool!</h1>
-                <p>If you like Fez, please support us by spreading the word. You can catch me on <a href="http://plus.google.com/114564489020097923600">Google+</a> or <a href="http://www.facebook.com/satya164">Facebook</a>. Also check out my <a href="http://wibblystuff.blogspot.com/">blog</a> and <a href="http://satya164.deviantart.com/">deviantArt</a> page :)</p>
+                <p>Fedy is released under GNU GPL V3.0 and the source code is publicly available on <a href="https://github.com/satya164/fedy/">GitHub</a>. So you can play with the code and see what it does.</p>
+                <p>Fedy is extensible via <a href="https://github.com/satya164/fedy/wiki/Plugins-support">plugins</a>. Writing a plugin is easy and fun.</p>
+                <h1>Fedyzes are cool!</h1>
+                <p>If you like Fedy, please support us by spreading the word. You can catch me on <a href="http://plus.google.com/114564489020097923600">Google+</a> or <a href="http://www.facebook.com/satya164">Facebook</a>. Also check out my <a href="http://wibblystuff.blogspot.com/">blog</a> and <a href="http://satya164.deviantart.com/">deviantArt</a> page :)</p>
             </div>
         </section>
         <footer>
-            Fez &#169; 2014 Satyajit Sahoo. Fedora<sup>TM</sup> is a trademark of Red Hat. All rights reserved.
+            Fedy &#169; 2014 Satyajit Sahoo. Fedora<sup>TM</sup> is a trademark of Red Hat. All rights reserved.
         </footer>
     </body>
 </html>
