Add Google verification

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
+        <meta name="google-site-verification" content="fDtZfq6CqXYw0-OYzxeXGx2Nbqq4NbiSInSFtexn_-s" />
         <meta name="title" content="Fedy - Tweak your Fedora" />
         <meta name="description" content="Fedy lets you install codecs and additional software that Fedora doesn't want to ship, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just few clicks." />
         <title>Fedy - Tweak your Fedora</title>
