--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-        <meta name="google-site-verification" content="fDtZfq6CqXYw0-OYzxeXGx2Nbqq4NbiSInSFtexn_-s" />
         <meta name="title" content="Fedy - Tweak your Fedora" />
         <meta name="description" content="Fedy lets you install codecs and additional software that Fedora doesn't want to ship, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just few clicks." />
         <title>Fedy - Tweak your Fedora</title>
@@ -10,6 +9,16 @@
         <link rel="stylesheet" type="text/css" media="screen" href="./resources/css/stylesheet.css">
         <link rel="shortcut icon" href="./resources/img/favicon.png" type="image/x-icon" />
         <link rel="image_src" href="./resources/img/preview.png" />
+        
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-47625805-1', 'satya164.github.io');
+          ga('send', 'pageview');
+        </script>
     </head>
     <body>
         <section id="home">
