use HTTPS for URLs in su command
This prevents a man-in-the-middle attacker with access to modify the
HTTP traffic from injecting code that would be run as root.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>Fedy lets you install multimedia codecs and additional software that Fedora <a href="https://fedoraproject.org/wiki/Forbidden_items?rd=ForbiddenItems">doesn't want to ship</a>, like mp3 support, Adobe Flash, Oracle Java etc., and much more with just a few clicks.</p>
                 <p>To install Fedy in Fedora, open a Terminal and run the following command,</p>
                 <div class="code">
-                    <code>su -c "curl <a href="http://satya164.github.io/fedy/fedy-installer">http://satya164.github.io/fedy/fedy-installer</a> -o fedy-installer && chmod +x fedy-installer && ./fedy-installer"</code>
+                    <code>su -c "curl <a href="https://satya164.github.io/fedy/fedy-installer">https://satya164.github.io/fedy/fedy-installer</a> -o fedy-installer && chmod +x fedy-installer && ./fedy-installer"</code>
                 </div>
                 <div class="social">
                     <a href="http://plus.google.com/share?url=http://satya164.github.io/fedy/">
